--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -257,22 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "42c1b78d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#brower.quit()"
+    "browser.quit()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf2d72ca",
+   "cell_type": "markdown",
+   "id": "c85ff0cf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Skill drill "
+    "### Skill drill "
    ]
   },
   {
