--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d527cf13",
+   "id": "5a69c1c9",
    "metadata": {},
    "source": [
     "### Original Mission to Mars Code"
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Deadline Closing for Names to Fly on NASA's Next Mars Rover</div>"
+       "<div class=\"content_title\">AI Is Helping Scientists Discover Fresh Craters on Mars</div>"
       ]
      },
      "execution_count": 5,
@@ -115,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Deadline Closing for Names to Fly on NASA's Next Mars Rover\""
+       "'AI Is Helping Scientists Discover Fresh Craters on Mars'"
       ]
      },
      "execution_count": 6,
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "'You have until Sept. 30 to send your names to Mars aboard the Mars 2020 rover. '"
+       "\"It's the first time machine learning has been used to find previously unknown craters on the Red Planet.\""
       ]
      },
      "execution_count": 7,
@@ -205,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 11,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 12,
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3167dd",
+   "id": "a7f0634e",
    "metadata": {},
    "source": [
     "### Mission to Mars Challenge Starter Code"
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "babb7a0d",
+   "id": "b19b58c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8c29af35",
+   "id": "33cd4e40",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc75d4ce",
+   "id": "6b6aad94",
    "metadata": {},
    "source": [
     "### Visit the NASA Mars News Site"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9cbcb25f",
+   "id": "2bc5b932",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b4773be6",
+   "id": "9b8509e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,13 +472,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d2bdd31e",
+   "id": "691521bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">6 Things to Know About NASA's Ingenuity Mars Helicopter</div>"
+       "<div class=\"content_title\">Space History Is Made in This NASA Robot Factory</div>"
       ]
      },
      "execution_count": 20,
@@ -493,13 +493,13 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "76d48a84",
+   "id": "be611395",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"6 Things to Know About NASA's Ingenuity Mars Helicopter\""
+       "'Space History Is Made in This NASA Robot Factory'"
       ]
      },
      "execution_count": 21,
@@ -516,13 +516,13 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d2342a03",
+   "id": "b080078f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The first helicopter attempting to fly on another planet is a marvel of engineering. Get up to speed with these key facts about its plans.'"
+       "\"From rockets to rovers, JPL's Spacecraft Assembly Facility has been at the center of robotic spaceflight. Here's a closer look at what makes it so special.\""
       ]
      },
      "execution_count": 22,
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2a8d65",
+   "id": "acc20928",
    "metadata": {},
    "source": [
     "### JPL Space Images Featured Image"
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9168113e",
+   "id": "492242f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "53d45c7a",
+   "id": "61841fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cf2a9d03",
+   "id": "76284b74",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b2e6de79",
+   "id": "ee7beb3d",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fe1b9ac8",
+   "id": "8d2d21d3",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce568560",
+   "id": "3673fda7",
    "metadata": {},
    "source": [
     "### Mars Facts"
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "dbef5b72",
+   "id": "23fbb306",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f61ddbf8",
+   "id": "7fa09da2",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c60b8d0e",
+   "id": "9939e122",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa06d96",
+   "id": "8a2468c5",
    "metadata": {},
    "source": [
     "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "190a7bfb",
+   "id": "54560e9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,24 +1078,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "296118c9",
+   "execution_count": 32,
+   "id": "e1cdb2f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg\n",
+      "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg\n",
+      "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg\n",
+      "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "\n"
+    "html = browser.html\n",
+    "hem_soup = soup(html, 'html.parser')\n",
+    "hemispheres_item = hem_soup.find_all('div', class_=\"item\")\n",
+    "\n",
+    "for x in hemispheres_item:\n",
+    "    title = x.find('h3').text\n",
+    "    url = x.find('a')['href']\n",
+    "    hem_img_url = f'https://astrogeology.usgs.gov/{url}'\n",
+    "    browser.visit(hem_img_url)\n",
+    "    html = browser.html\n",
+    "    hem_soup = soup(html, 'html.parser')\n",
+    "    hemispheres = hem_soup.find('div', class_='downloads')\n",
+    "    hemispheres_url = hemispheres.find('a')['href']\n",
+    "    \n",
+    "    print(hemispheres_url)\n",
+    "    img_data=dict({'title':title, 'img_url':hemispheres_url})\n",
+    "    hemisphere_image_urls.append(img_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63bd0ef8",
+   "execution_count": 33,
+   "id": "5509e8d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Print the list that holds the dictionary of each image url and title.\n",
     "hemisphere_image_urls"
@@ -1104,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a3e1cb4b",
+   "id": "613d1d9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8de4d0e",
+   "id": "80faf353",
    "metadata": {},
    "outputs": [],
    "source": []
